# Lab1

./: .gitignore  CMakeLists.txt  dynamicArray.h  main.c
bonus/: array_type.h
src/: CMakeLists.txt  dynamic_array.c  dynamic_array.h  main.c  mappers.c  mappers.h  real_type.c  real_type.h  string_type.c  string_type.h  type_info.h
tests/: CMakeLists.txt  test_dynamic_array.c
